[20.January 2009]
- monstermixins.rb: small cosmetic modification
- entities/bear.rb: Bear attacks with delay of 2 seconds
- level LockKeys: added to be able to see all versions of locks and keys 
  in the game (because I wanted to test images contributed by Magnus Nygaard)

[10.January 2009]
- structuredworld.rb: I just touched the documentation
- initfv.rb, game.rb: finished selecting of campaign
- locs/Tests.../Ancient.../First/first_script.rb: fixed (was broken)
- initfv.rb, freevikings.rb, levelsuite.rb: commandline option --levelsuite
  fixed; some code (finding title of Level(Suite) in a directory) from 
  initfv.rb moved to class LevelSuite and reused in freevikings.rb

[9.January 2009] 
- FREEVIKINGS BROKEN UP! CHECK OUT OLDER VERSION TO PLAY!
- initfv.rb: Select to choose campaign
- structuredworld.rb, levelsuite.rb: requirement stuff cleared a bit
- config/... : added new config entry (dirs with campaigns)

[8.January 2009]
- passwordedit.rb: RD->RDoc
- topmenu.rb: added change_proc feature (argument of FVC...new has always
  been there, but didn't do anything), removed class DisplayModeChooseButton
  (not needed - FVConfiguratorButton with right Proc can do the same work)
- initfv.rb: DisplayModeChooseButton replaced with FVConfiguratorButton

[5.January 2009]
- removed content of directory ext/ (old compiled replacement for critical 
  classes)
- config/log4rconfig.rb: created special log for loading of configuration
  and one common log for all cases where I'm too lazy to create new one.
- freevikings.rb: configuration file is first searched in
  $FREEVIKINGS_HOME, than in $HOME/.freeVikings
- location.rb: configurable order of vikings
- fvdef.rb: added missing slash which caused error in all levels with objects
  using GfxTheme.

[2.January 2009]
- freevikings.rb: doesn't load personal config if HOME env. variable isn't defined

[1.January 2009]
- collisiontest.rb: RD->RDoc (why don't I move this to SchwerEngine?)