@@ -11,7 +11,9 @@
 
 ======== Code ==========================================================
 
-(-) Walking Bear doesn't kill instantly
+(-) Rename Killtoy to Mjolnir?
+
+(-) Automatic frame limit (optional)
 
 (-) repair megahIte
 
